%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!1102 &-9127305450425028995
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: righting
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 61f0095d16994af4ca6614f912ee7baf, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-5726583465123502488
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: uping
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: lefting
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: righting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: downing
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: left
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: right
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: up
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: down
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -9127305450425028995}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-3373360906756198281
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: up
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 3b9aa2d35007b354b9ff8f53e156527f, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-1463173878552769780
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: uping
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: lefting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: righting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: downing
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: left
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: right
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: up
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: down
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 466134234134577035}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &-994470925771702911
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: uping
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: lefting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: righting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: downing
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: left
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: right
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: up
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: down
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 4401259264823004373}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: NPC2
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: lefting
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: righting
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: uping
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: downing
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: left
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: right
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: up
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: down
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: 5290414629497932496}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1102 &466134234134577035
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: uping
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 20bc034c006b90849b0a0a35760fed45, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &568740633623015770
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: uping
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: lefting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: righting
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: downing
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: left
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: right
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: up
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: down
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 5699980107353069986}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &1469184334141316578
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: uping
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: lefting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: righting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: downing
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: left
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: right
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: up
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: down
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 7649754582790983981}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &2487715719540544392
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: uping
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: lefting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: righting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: downing
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: left
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: right
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: up
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: down
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 3148009846093580330}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &3148009846093580330
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: down
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 525c44fe61b53804e942470e9b8627af, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &4401259264823004373
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: lefting
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 841968db298b0a34f83940a9519d9fdc, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1107 &5290414629497932496
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 4401259264823004373}
    m_Position: {x: 30, y: 110, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -9127305450425028995}
    m_Position: {x: 660, y: 110, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 466134234134577035}
    m_Position: {x: 350, y: -20, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 5699980107353069986}
    m_Position: {x: 350, y: 220, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 6996806401270509674}
    m_Position: {x: 100, y: 30, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 7649754582790983981}
    m_Position: {x: 580, y: 180, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -3373360906756198281}
    m_Position: {x: 610, y: 30, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 3148009846093580330}
    m_Position: {x: 130, y: 170, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions:
  - {fileID: -1463173878552769780}
  - {fileID: 7578947631381338733}
  - {fileID: -994470925771702911}
  - {fileID: 2487715719540544392}
  - {fileID: 568740633623015770}
  - {fileID: 8189174136653446891}
  - {fileID: -5726583465123502488}
  - {fileID: 1469184334141316578}
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 360, y: 100, z: 0}
  m_EntryPosition: {x: 0, y: 240, z: 0}
  m_ExitPosition: {x: 850, y: 220, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 3148009846093580330}
--- !u!1102 &5699980107353069986
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: downing
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 1e35f0c119640614aaaf42b3766df654, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &6996806401270509674
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: left
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: fce0dd79fba25914995e25ec0a07b98f, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &7578947631381338733
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: uping
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: lefting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: righting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: downing
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: left
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: right
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: up
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: down
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 6996806401270509674}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &7649754582790983981
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: right
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 86505f8026e778b4c9fe4e3796bf8438, type: 2}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &8189174136653446891
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: uping
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: lefting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: righting
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: downing
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: left
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: right
    m_EventTreshold: 0
  - m_ConditionMode: 1
    m_ConditionEvent: up
    m_EventTreshold: 0
  - m_ConditionMode: 2
    m_ConditionEvent: down
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -3373360906756198281}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
